--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
                     <h3>NomeEmpresa</h3>
                     <p>Setor</p>
                 </div>
+                <div>
+                    <h3>NomeEmpresa</h3>
+                    <p>Setor</p>
+                </div>
+                <div>
+                    <h3>NomeEmpresa</h3>
+                    <p>Setor</p>
+                </div>
             </div>
         </section>
     </main>
