--- a/index.html
+++ b/index.html
@@ -27,34 +27,8 @@
             </select>
             <div class="list__companies">
                 <h2>Lista de Empresas</h2>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
-                <div>
-                    <h3>NomeEmpresa</h3>
-                    <p>Setor</p>
-                </div>
+                <span class="companies">
+                </span>
             </div>
         </section>
     </main>
@@ -65,8 +39,8 @@
                 <button class="close__login__modal">X</button>
             </span>
             <p class="big__text">Preencha os campos para realizar login</p>
-            <input type="email" placeholder="Seu e-mail">
-            <input type="password" placeholder="Sua senha">
+            <input type="email" placeholder="Seu e-mail" class="input__login">
+            <input type="password" placeholder="Sua senha" class="input__login">
             <button class="button__modal__login">Login</button>
             <p class="small__text">ou</p>
             <button class="button__register__modal">Cadastre-se</button>
@@ -83,5 +57,6 @@
         </div>
     </dialog>
     <script type="module" src="scripts/script.js"></script>
+    <script type="module" src="scripts/request.js"></script>
 </body>
 </html>
