criação do login chumbado

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <button class="close__login__modal">X</button>
             </span>
             <p class="big__text">Preencha os campos para realizar login</p>
-            <input type="email" placeholder="Seu e-mail" class="input__login">
-            <input type="password" placeholder="Sua senha" class="input__login">
+            <input name="email" type="email" placeholder="Seu e-mail" class="input__login">
+            <input name="password" type="password" placeholder="Sua senha" class="input__login">
             <button class="button__modal__login">Login</button>
             <p class="small__text">ou</p>
             <button class="button__register__modal">Cadastre-se</button>
@@ -49,9 +49,9 @@
     <dialog class="register__modal">
         <div class="div__register">
             <h2>Cadastre-se</h2>
-            <input type="text" placeholder="Seu nome">
-            <input type="email" placeholder="Seu e-mail">
-            <input type="password" placeholder="Sua senha">
+            <input name="name" type="text" placeholder="Seu nome">
+            <input name="email" type="email" placeholder="Seu e-mail">
+            <input name="password" type="password" placeholder="Sua senha">
             <button class="modal__register__button">Cadastrar</button>
             <button class="modal__button__return">Retornar</button>
         </div>
