pagina inicial terminada

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <dialog class="register__modal">
         <div class="div__register">
             <h2>Cadastre-se</h2>
-            <input name="name" type="text" placeholder="Seu nome">
-            <input name="email" type="email" placeholder="Seu e-mail">
-            <input name="password" type="password" placeholder="Sua senha">
+            <input name="name" type="text" placeholder="Seu nome" class="input__register">
+            <input name="email" type="email" placeholder="Seu e-mail" class="input__register">
+            <input name="password" type="password" placeholder="Sua senha" class="input__register">
             <button class="modal__register__button">Cadastrar</button>
             <button class="modal__button__return">Retornar</button>
         </div>
