--- a/pages/user.html
+++ b/pages/user.html
@@ -25,5 +25,6 @@
             <h2>Você ainda não foi contratado</h2>
         </section>
     </main>
+    <script type="module" src="../scripts/user.js"></script>
 </body>
 </html>
