--- a/pages/user.html
+++ b/pages/user.html
@@ -14,12 +14,10 @@
             <img src="../images/ponto.svg" alt="">
             <h2>Kenzie Empresas</h2>
         </div>
-        <button>Logout</button>
+        <button class="logout__button">Logout</button>
     </header>
     <main>
-        <div>
-            <h2>UserName</h2>
-            <p>nsei@gmail.com</p>
+        <div class="div__user__informations">
         </div>
         <section>
             <h2>Você ainda não foi contratado</h2>
