--- a/pages/user.html
+++ b/pages/user.html
@@ -19,7 +19,7 @@
     <main>
         <div class="div__user__informations">
         </div>
-        <section class="company__informations">
+        <section id="12">
             <h2>Você ainda não foi contratado</h2>
         </section>
     </main>
