--- a/pages/user.html
+++ b/pages/user.html
@@ -19,6 +19,7 @@
     <main>
         <div class="div__user__informations">
         </div>
+        <section class="header__company"></section>
         <section id="12">
             <h2>Você ainda não foi contratado</h2>
         </section>
