--- a/pages/adm.html
+++ b/pages/adm.html
@@ -15,7 +15,7 @@
             <img src="../images/pontoRoxo.svg" alt="">
             <h2>Kenzie Empresas</h2>
         </div>
-        <button>Logout</button>
+        <button class="button__adm__logout">Logout</button>
     </header>
     <main>
         <section class="section__top">
@@ -23,20 +23,20 @@
                 <h2>Departamentos</h2>
             </div>
             <div class="div__buttons">
-                <select name="" id="">
+                <select name="" id="" class="select__companies">
                     <option value="">Selecionar Empresa</option>
                 </select>
                 <button> <img src="../images/+.svg" alt=""> Criar</button>
             </div>
         </section>
         <section class="section__departaments">
-
+            
         </section>
         <h2>Usuários cadastrados</h2>
         <section class="section__register">
 
         </section>
     </main>
-    
+    <script type="module" src="../scripts/admin.js"></script>
 </body>
 </html>
