feita a Validação de usuário logado

--- a/pages/adm.html
+++ b/pages/adm.html
@@ -42,12 +42,12 @@
                     <h2>Criar Departamento</h2>
                     <button class="close__modal">X</button>
                 </span>
-                <input type="text" placeholder="Nome do departamento">
-                <input type="text" placeholder="Descrição">
-                <select name="" id="" class="departament__select">
+                <input class="input__departament" name="name" type="text" placeholder="Nome do departamento">
+                <input class="input__departament" name="description" type="text" placeholder="Descrição">
+                <select name="company_id" id="" class="departament__select">
                     <option value="">Selecionar empresa</option>
                 </select>
-                <button>Criar</button>
+                <button class="department__create">Criar</button>
             </div>
         </dialog>
     </main>
